# persona-wire

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  dist-workspace.toml  justfile  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
bundles/: quickstart.toml
crates/persona-wire/: CHANGELOG.md  Cargo.toml
crates/persona-wire-adapter-activitypub/: Cargo.toml
crates/persona-wire-adapter-activitypub/src/: lib.rs
crates/persona-wire-adapter-apple-notes/: Cargo.toml
crates/persona-wire-adapter-apple-notes/src/: lib.rs
crates/persona-wire-adapter-bluesky/: Cargo.toml
crates/persona-wire-adapter-bluesky/src/: lib.rs
crates/persona-wire-adapter-github/: Cargo.toml
crates/persona-wire-adapter-github/src/: lib.rs
crates/persona-wire-adapter-mastodon/: Cargo.toml
crates/persona-wire-adapter-mastodon/src/: lib.rs
crates/persona-wire-adapter-matrix/: Cargo.toml
crates/persona-wire-adapter-matrix/src/: lib.rs
crates/persona-wire-adapter-mcp/: Cargo.toml
crates/persona-wire-adapter-mcp/src/: lib.rs
crates/persona-wire-adapter-mini-app/: Cargo.toml
crates/persona-wire-adapter-mini-app/src/: lib.rs
crates/persona-wire-adapter-notion/: Cargo.toml
crates/persona-wire-adapter-notion/src/: lib.rs
crates/persona-wire-adapter-obsidian/: Cargo.toml
crates/persona-wire-adapter-obsidian/src/: lib.rs
crates/persona-wire-adapter-obsidian/tests/: wire_render_smoke.rs
crates/persona-wire-adapter-obsidian/tests/fixtures/sample-vault/: note-plain.md  note-with-wiki-links.md  note-with-yaml-frontmatter.md
crates/persona-wire-adapter-persona-pack/: Cargo.toml
crates/persona-wire-adapter-persona-pack/src/: lib.rs
crates/persona-wire-adapter-rss/: Cargo.toml
crates/persona-wire-adapter-rss/src/: lib.rs
crates/persona-wire-adapter-slack/: Cargo.toml
crates/persona-wire-adapter-slack/src/: lib.rs
crates/persona-wire-adapter-sqlite-x/: Cargo.toml
crates/persona-wire-adapter-sqlite-x/src/: lib.rs
crates/persona-wire-adapter-todoist/: Cargo.toml
crates/persona-wire-adapter-todoist/src/: lib.rs
crates/persona-wire-cli/: Cargo.toml
crates/persona-wire-cli/src/: main.rs
crates/persona-wire-core/: Cargo.toml
crates/persona-wire-core/src/: lib.rs
crates/persona-wire-core/src/application/: auth.rs  bundle_install.rs  bundle_registry.rs  merger.rs  mod.rs  persona_pack_resolver.rs  plugin_registry.rs  projection.rs  projection_mapper.rs  projection_naming.rs  projection_overlay.rs  projection_registry.rs  spec_registry.rs  use_cases.rs  wiring_mapper.rs  workflow_mapper.rs
crates/persona-wire-core/src/application/doctor/: finding.rs  mod.rs  probe.rs  registry.rs  render.rs  test_helpers.rs
crates/persona-wire-core/src/application/doctor/probes/: graph_dangling_edge.rs  graph_edges_zero.rs  graph_orphan_node.rs  mod.rs  workflow_disabled.rs  workflow_duplicate_trigger.rs  workflow_emit_target_unregistered.rs  workflow_persona_no_workflow.rs  workflow_trigger_infra_missing.rs
crates/persona-wire-core/src/domain/: compute.rs  error.rs  mod.rs  repository.rs  specification.rs
crates/persona-wire-core/src/domain/entity/: bundle.rs  context_wiring.rs  mod.rs  persona_id.rs  projection.rs  slot.rs  source.rs  wiring.rs  workflow.rs
crates/persona-wire-core/src/domain/graph/: autoversion.rs  compute.rs  constraint.rs  crud.rs  mod.rs  node.rs  specification.rs
crates/persona-wire-core/src/domain/port/: mod.rs  projection_renderer.rs
crates/persona-wire-core/src/infrastructure/: adapter.rs  filter.rs  mod.rs  rendering.rs  storage.rs  tank.rs  template.rs  wire_uri.rs
crates/persona-wire-core/src/infrastructure/projection/: mod.rs  static.rs
crates/persona-wire-core/tests/: bundle_e2e.rs  db_path_resolution.rs  p1_e2e.rs  p2a_e2e.rs  p2b_e2e.rs  p2c_e2e.rs  projection_e2e.rs  spec_e2e.rs
crates/persona-wire-credentials/: Cargo.toml
crates/persona-wire-credentials/src/: lib.rs
crates/persona-wire-mcp/: Cargo.toml  build.rs  onboarding.md
crates/persona-wire-mcp/src/: lib.rs  main.rs
crates/persona-wire-transport-http/: Cargo.toml
crates/persona-wire-transport-http/src/: lib.rs
crates/persona-wire/src/: lib.rs  main.rs
crates/persona-wire/src/migrations/: m001_node_id_ulid.rs  m002_registry_id_ulid.rs  m003_bundle_installs_fk_relax.rs  mod.rs
crates/persona-wire/tests/: e2e_adapter_mcp.rs  e2e_alias_mcp.rs  e2e_alias_scope.rs  e2e_plain_scope.rs
crates/persona-wire/tests/common/: mod.rs
docs/: concept-2026-06-14.md  onboarding.md  plugin-trait.md  runbook-verify.md  wire-query-spec.md  wire-workflow-spec.md
docs/_archive/: concept-2026-06-14.md  plugin-trait.md
docs/aidoc/: llms-full.txt  llms.txt
docs/aidoc/api/: persona_wire.json  persona_wire_adapter_activitypub.json  persona_wire_adapter_apple_notes.json  persona_wire_adapter_bluesky.json  persona_wire_adapter_github.json  persona_wire_adapter_mastodon.json  persona_wire_adapter_matrix.json  persona_wire_adapter_mcp.json  persona_wire_adapter_mini_app.json  persona_wire_adapter_notion.json  persona_wire_adapter_obsidian.json  persona_wire_adapter_persona_pack.json  persona_wire_adapter_rss.json  persona_wire_adapter_slack.json  persona_wire_adapter_sqlite_x.json  persona_wire_adapter_todoist.json  persona_wire_core.json  persona_wire_credentials.json  persona_wire_mcp.json  persona_wire_transport_http.json
docs/aidoc/persona_wire/: index.md  migrations.md  migrations__m001_node_id_ulid.md  migrations__m002_registry_id_ulid.md  migrations__m003_bundle_installs_fk_relax.md
docs/aidoc/persona_wire_adapter_activitypub/: index.md
docs/aidoc/persona_wire_adapter_apple_notes/: index.md
docs/aidoc/persona_wire_adapter_bluesky/: index.md
docs/aidoc/persona_wire_adapter_github/: index.md
docs/aidoc/persona_wire_adapter_mastodon/: index.md
docs/aidoc/persona_wire_adapter_matrix/: index.md
docs/aidoc/persona_wire_adapter_mcp/: index.md
docs/aidoc/persona_wire_adapter_mini_app/: index.md
docs/aidoc/persona_wire_adapter_notion/: index.md
docs/aidoc/persona_wire_core/: domain.md  (+58 more)
scripts/: migrate_id_to_ulid.sql
(+9 files in other folders)
