[workspace]
resolver = "2"
members = [
    "crates/persona-wire-core",
    "crates/persona-wire-mcp",
    "crates/persona-wire",
    "crates/persona-wire-adapter-mini-app",
    "crates/persona-wire-adapter-persona-pack",
    "crates/persona-wire-adapter-sqlite-x",
    "crates/persona-wire-adapter-obsidian",
    "crates/persona-wire-adapter-mcp",
    "crates/persona-wire-adapter-rss",
    "crates/persona-wire-transport-http",
    "crates/persona-wire-credentials",
    "crates/persona-wire-adapter-github",
]

[workspace.package]
version = "0.10.0"
edition = "2021"
authors = ["Yutaka Nishimura"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/persona-wire"
rust-version = "1.78"
keywords = ["mcp", "graph", "knowledge-graph", "persona", "context"]
categories = ["database", "data-structures"]

[workspace.dependencies]
# Shared utility deps
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# MCP server
rmcp = { version = "1", features = ["server", "transport-io"] }
schemars = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# URI parse (Adapter source_uri query string)
url = "2"

# Plugin trait (dyn-compatible async fn — Adapter / Projection)
async-trait = "0.1"

# ULID for opaque node/edge ids
ulid = { version = "1", features = ["serde"] }

# Obsidian vault frontmatter parse (YAML / TOML / JSON multiformat)
gray_matter = "0.2"

# TOML serde (Bundle manifest body parse)
toml = "0.8"

# RSS 2.0 / RSS 1.0 / Atom / JSON Feed auto-detecting parser (rss:// adapter)
feed-rs = "2"

# HTTP client for feed fetch (rss:// adapter) / shared HTTP transport — rustls only, no native-tls/openssl dep.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Secret-holding token type (credentials, HTTP bearer auth) — never Debug/log-exposed.
secrecy = "0.10"

# OS keychain access (credentials crate).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Intra-workspace
persona-wire-core = { path = "crates/persona-wire-core", version = "0.10.0" }
persona-wire-adapter-mini-app = { path = "crates/persona-wire-adapter-mini-app", version = "0.10.0" }
persona-wire-adapter-persona-pack = { path = "crates/persona-wire-adapter-persona-pack", version = "0.10.0" }
persona-wire-adapter-sqlite-x = { path = "crates/persona-wire-adapter-sqlite-x", version = "0.10.0" }
persona-wire-adapter-obsidian = { path = "crates/persona-wire-adapter-obsidian", version = "0.10.0" }
persona-wire-adapter-mcp = { path = "crates/persona-wire-adapter-mcp", version = "0.10.0" }
persona-wire-adapter-rss = { path = "crates/persona-wire-adapter-rss", version = "0.10.0" }
persona-wire-transport-http = { path = "crates/persona-wire-transport-http", version = "0.10.0" }
persona-wire-credentials = { path = "crates/persona-wire-credentials", version = "0.10.0" }
persona-wire-adapter-github = { path = "crates/persona-wire-adapter-github", version = "0.10.0" }
