# The profile that 'dist' will build with (invoked by the Release workflow
# via `cargo build --profile dist` for cargo-dist's multi-target artifacts).
# Missing this section was the root cause of the v0.12.0 Release workflow
# failure — cargo-dist bailed with `error: profile 'dist' is not defined`.
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
resolver = "2"
members = [
    "crates/persona-wire-core",
    "crates/persona-wire-mcp",
    "crates/persona-wire",
    "crates/persona-wire-adapter-activitypub",
    "crates/persona-wire-adapter-mini-app",
    "crates/persona-wire-adapter-persona-pack",
    "crates/persona-wire-adapter-sqlite-x",
    "crates/persona-wire-adapter-obsidian",
    "crates/persona-wire-adapter-mcp",
    "crates/persona-wire-adapter-rss",
    "crates/persona-wire-transport-http",
    "crates/persona-wire-credentials",
    "crates/persona-wire-adapter-github",
    "crates/persona-wire-adapter-todoist",
    "crates/persona-wire-adapter-notion",
    "crates/persona-wire-adapter-slack",
    "crates/persona-wire-adapter-apple-notes",
    "crates/persona-wire-adapter-bluesky",
    "crates/persona-wire-adapter-matrix",
    "crates/persona-wire-adapter-mastodon",
]

[workspace.package]
version = "0.14.4"
edition = "2021"
authors = ["Yutaka Nishimura"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/persona-wire"
homepage = "https://github.com/ynishi/persona-wire"
documentation = "https://docs.rs/persona-wire"
description = "Graph engine over persona × SoT × workflow context routing"
rust-version = "1.78"
keywords = ["mcp", "graph", "knowledge-graph", "persona", "context"]
categories = ["database", "data-structures"]

[workspace.dependencies]
# Shared utility deps
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Content hashing for Tank item dedup identity — a stable hash across Rust
# versions (unlike std DefaultHasher), required because the Tank item log
# persists the identity key. Consumed by wire_materialize (persona-wire-core).
sha2 = "0.10"

# RFC3339 timestamp formatting (Core Data timestamp -> RFC3339, applenotes:// adapter macOS-only path)
time = { version = "0.3", features = ["formatting"] }

# MCP server
rmcp = { version = "1", features = ["server", "transport-io"] }
schemars = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# URI parse (Adapter source_uri query string)
url = "2"

# Percent-decode of query values already normalized to raw form by adapters
# (e.g. persona-wire-adapter-todoist's `filter` value, since WireUri::query_get
# stores raw/undecoded query strings).
percent-encoding = "2"

# Plugin trait (dyn-compatible async fn — Adapter / Projection)
async-trait = "0.1"

# ULID for opaque node/edge ids
ulid = { version = "1", features = ["serde"] }

# Obsidian vault frontmatter parse (YAML / TOML / JSON multiformat)
gray_matter = "0.2"

# TOML serde (Bundle manifest body parse)
toml = "0.8"

# RSS 2.0 / RSS 1.0 / Atom / JSON Feed auto-detecting parser (rss:// adapter)
feed-rs = "2"

# HTTP client for feed fetch (rss:// adapter) / shared HTTP transport — rustls only, no native-tls/openssl dep.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Secret-holding token type (credentials, HTTP bearer auth) — never Debug/log-exposed.
secrecy = "0.10"

# OS keychain access (credentials crate).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# TTY no-echo password/token prompt (`persona-wire token set`).
rpassword = "7"

# Intra-workspace
persona-wire-core = { path = "crates/persona-wire-core", version = "0.14.4" }
persona-wire-adapter-activitypub = { path = "crates/persona-wire-adapter-activitypub", version = "0.14.4" }
persona-wire-adapter-mini-app = { path = "crates/persona-wire-adapter-mini-app", version = "0.14.4" }
persona-wire-adapter-persona-pack = { path = "crates/persona-wire-adapter-persona-pack", version = "0.14.4" }
persona-wire-adapter-sqlite-x = { path = "crates/persona-wire-adapter-sqlite-x", version = "0.14.4" }
persona-wire-adapter-obsidian = { path = "crates/persona-wire-adapter-obsidian", version = "0.14.4" }
persona-wire-adapter-mcp = { path = "crates/persona-wire-adapter-mcp", version = "0.14.4" }
persona-wire-adapter-rss = { path = "crates/persona-wire-adapter-rss", version = "0.14.4" }
persona-wire-transport-http = { path = "crates/persona-wire-transport-http", version = "0.14.4" }
persona-wire-credentials = { path = "crates/persona-wire-credentials", version = "0.14.4" }
persona-wire-adapter-github = { path = "crates/persona-wire-adapter-github", version = "0.14.4" }
persona-wire-adapter-todoist = { path = "crates/persona-wire-adapter-todoist", version = "0.14.4" }
persona-wire-adapter-notion = { path = "crates/persona-wire-adapter-notion", version = "0.14.4" }
persona-wire-adapter-slack = { path = "crates/persona-wire-adapter-slack", version = "0.14.4" }
persona-wire-adapter-apple-notes = { path = "crates/persona-wire-adapter-apple-notes", version = "0.14.4" }
persona-wire-adapter-bluesky = { path = "crates/persona-wire-adapter-bluesky", version = "0.14.4" }
persona-wire-adapter-matrix = { path = "crates/persona-wire-adapter-matrix", version = "0.14.4" }
persona-wire-adapter-mastodon = { path = "crates/persona-wire-adapter-mastodon", version = "0.14.4" }
