[package]
name = "persona-wire-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "persona-wire core: Domain (Graph + Specification + Compute + Constraint + AutoVersion + CRUD) + Application (NamedProjection registry, Use Case) + Infrastructure (SQLite storage, Rendering adapter). Transport-agnostic."

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite.workspace = true
handlebars = "6"
toml.workspace = true
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
url.workspace = true
async-trait.workspace = true
ulid.workspace = true
# Secret-holding token type for AuthMaterial (application::auth) — never
# Debug/log-exposed. Same dep already used by persona-wire-credentials /
# persona-wire-transport-http / every HTTP adapter crate.
secrecy.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

