[package]
name = "persona-wire-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "persona-wire core: Domain (Graph + Specification + Compute + Constraint + AutoVersion + CRUD) + Application (NamedProjection registry, Use Case) + Infrastructure (SQLite storage, Rendering adapter). Transport-agnostic."

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite.workspace = true
handlebars = "6"
toml.workspace = true
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
url.workspace = true
async-trait.workspace = true
ulid.workspace = true
# SHA-256 content hashing for Tank item dedup identity (wire_materialize).
sha2.workspace = true
# `parsing` feature enables RFC3339 since/until parsing in the tank:// adapter.
# The workspace default already carries `formatting` (applenotes:// path); the
# feature sets are unioned, so core gets both.
time = { workspace = true, features = ["parsing"] }
# Secret-holding token type for AuthMaterial (application::auth) — never
# Debug/log-exposed. Same dep already used by persona-wire-credentials /
# persona-wire-transport-http / every HTTP adapter crate.
secrecy.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

