[package]
name = "persona-wire-credentials"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Provider-chain credential resolution for persona-wire Adapters (env var → OS keychain), token type unified as secrecy::SecretString."

[dependencies]
persona-wire-core.workspace = true
secrecy.workspace = true
keyring.workspace = true

# macOS-only: `KeyringTokenProvider::exists` uses the unified Keychain Item
# Search API (`SecItemCopyMatching`) directly to check for an entry without
# extracting its secret data, avoiding the "wants to use confidential
# information" prompt that the `keyring` crate's legacy
# `SecKeychainFindGenericPassword`-backed `get_password()` always triggers.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
