[package]
name = "persona-wire-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "persona-wire MCP server — rmcp transport bin. Wraps persona-wire-core's Application use cases as MCP Tools (pnet_* / wire_node_* / wire_edge_* / wire_spec_* / wire_projection_*)."

[[bin]]
name = "persona-wire-mcp"
path = "src/main.rs"

[dependencies]
persona-wire-core.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
