[package]
name = "persona-wire-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "persona-wire MCP server library — exposes serve_stdio() for the unified persona-wire CLI's `mcp` subcommand. Wraps persona-wire-core's Application use cases as MCP Tools (wire_init / wire_close / wire_node_* / wire_edge_* / wire_spec_* / wire_projection_*)."

[dependencies]
persona-wire-core.workspace = true
persona-wire-adapter-mini-app.workspace = true
persona-wire-adapter-mcp.workspace = true
persona-wire-adapter-obsidian.workspace = true
persona-wire-adapter-persona-pack.workspace = true
persona-wire-adapter-sqlite-x.workspace = true
persona-wire-adapter-rss.workspace = true
persona-wire-adapter-github.workspace = true
persona-wire-adapter-todoist.workspace = true
persona-wire-adapter-notion.workspace = true
persona-wire-adapter-slack.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
