[package]
name = "persona-wire"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "persona-wire unified CLI — clap-based bin dispatching subcommands (init / node / edge / spec / projection / wire-init / wire-close / mcp). The `mcp` subcommand boots the stdio MCP server (persona-wire-mcp lib)."

[[bin]]
name = "persona-wire"
path = "src/main.rs"

[dependencies]
persona-wire-core.workspace = true
persona-wire-adapter-mini-app.workspace = true
persona-wire-adapter-obsidian.workspace = true
persona-wire-adapter-persona-pack.workspace = true
persona-wire-adapter-sqlite-x.workspace = true
persona-wire-mcp = { path = "../persona-wire-mcp", version = "0.5.2" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
mini-app-core = "0.12"
