[package]
name = "persona-wire"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "persona-wire unified CLI — clap-based bin dispatching subcommands (init / node / edge / spec / projection / wire-init / wire-close / mcp). The `mcp` subcommand boots the stdio MCP server (persona-wire-mcp lib)."

[lib]
name = "persona_wire"
path = "src/lib.rs"

[[bin]]
name = "persona-wire"
path = "src/main.rs"

[[bin]]
name = "pw-migrate"
path = "src/bin/pw-migrate.rs"

[[bin]]
name = "migrate_id_to_ulid"
path = "src/bin/migrate_id_to_ulid.rs"

[dependencies]
persona-wire-core.workspace = true
rusqlite.workspace = true
ulid.workspace = true
persona-wire-adapter-mini-app.workspace = true
persona-wire-adapter-obsidian.workspace = true
persona-wire-adapter-persona-pack.workspace = true
persona-wire-adapter-sqlite-x.workspace = true
persona-wire-mcp = { path = "../persona-wire-mcp", version = "0.8.1" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
mini-app-core = "0.12"
